# ha-mqtt-discovery-rs

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
.github/workflows/: build.yml
generator/: bun.lockb  package.json
generator/input/: alarm_control_panel.md  alarm_control_panel.yml  binary_sensor.md  binary_sensor.yml  button.md  button.yml  camera.md  camera.yml  climate.md  climate.yml  cover.md  cover.yml  device_tracker.md  device_tracker.yml  device_trigger.md  device_trigger.yml  event.md  event.yml  fan.md  fan.yml  humidifier.md  humidifier.yml  image.md  image.yml  lawn_mower.md  lawn_mower.yml  light.md  light.yml  lock.md  lock.yml  notify.md  notify.yml  number.md  number.yml  scene.md  scene.yml  select.md  select.yml  sensor.md  sensor.yml  (+17 more)
generator/input/device_classes/: cover.markdown  homeassistant.markdown  media_player.markdown  number.markdown  sensor.markdown
generator/src/: abbreviations.ts  entity.ts  index.ts  rust_device_classes.mustache  rust_mod.mustache  rust_model.mustache  rust_model_imports.mustache  rust_units.mustache  units.ts
src/: common.rs  lib.rs
src/mqtt/: alarm_control_panel.rs  binary_sensor.rs  button.rs  camera.rs  climate.rs  cover.rs  device_classes.rs  device_tracker.rs  device_trigger.rs  event.rs  fan.rs  humidifier.rs  image.rs  lawn_mower.rs  light.rs  lock.rs  mod.rs  notify.rs  number.rs  scene.rs  select.rs  sensor.rs  siren.rs  switch.rs  tag.rs  text.rs  units.rs  update.rs  vacuum.rs  valve.rs  water_heater.rs
tests/: integration_tests.rs
