[package]
name = "ha-mqtt-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
derive_more = {version = "2.0.1", features = ["from"]}
rumqttc = "0.24"
rust_decimal = {version = "1.35", features = ["serde-float"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "=2.0.2"
testcontainers-modules = {version = "=0.11.6", features = ["mosquitto"]}
tokio = "=1.44.1"
rust_decimal_macros = "=1.37.0"