[package]
name = "ha-mqtt-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bon = "3.7"
rumqttc = "0.25"
rust_decimal = {version = "1.35", features = ["serde-float"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.10.6"
unicode-normalization = "0.1"

[dev-dependencies]
assert-json-diff = "=2.0.2"
testcontainers-modules = {version = "=0.13.0", features = ["mosquitto"]}
tokio = "=1.47.2"
rust_decimal_macros = "=1.39.0"